--- a/downloads_files.html
+++ b/downloads_files.html
@@ -131,10 +131,10 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="StaRVOOrS%20-%20Downloads_files/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="StaRVOOrS%20-%20Downloads_files/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 
 
