--- a/downloads_tool_binaries.html
+++ b/downloads_tool_binaries.html
@@ -92,7 +92,7 @@
                         <h3>StaRVOOrS</h3>
                         <p>The tool.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_source.html" class="btn btn-primary">Source Code</a>  
+                            <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>  
                         </p>
                         <p>
                            <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
@@ -106,7 +106,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a>
+                            <a href="http://cse-212294.cse.chalmers.se/starvoorsfiles/userguide.pdf" class="btn btn-primary">Download</a>
                         </p>
                     </div>
                   </div>
@@ -135,15 +135,7 @@
                     <hr>
                 </div>
                     <p>
-               <a href="files/tool/StaRVOOrS_1.7_64bits.tar.gz">StaRVOOrS 1.7 (64 bits)</a><br>
-           <br>
-               <a href="files/tool/StaRVOOrS_1.5_64bits.tar.gz">StaRVOOrS 1.5 (64 bits)</a><br>
-           <br>
-               <a href="files/tool/StaRVOOrS_1.5_32bits.tar.gz">StaRVOOrS 1.5 (32 bits)</a><br>
-           <br>
-               <a href="files/tool/StaRVOOrS_1.35_64bits.tar.gz">StaRVOOrS 1.35 (64 bits)</a><br>
-           <br>
-               <a href="files/tool/StaRVOOrS_1.35_32bits.tar.gz">StaRVOOrS 1.35 (32 bits)</a><br>
+               <a href="http://cse-212294.cse.chalmers.se/starvoors/files/tool/StaRVOOrS_1.7_64bits.tar.gz">StaRVOOrS 1.7 (64 bits)</a><br>
            <br>
                     </p>
             </div>
