--- a/downloads_tool_source.html
+++ b/downloads_tool_source.html
@@ -43,31 +43,31 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="http://cse-212294.cse.chalmers.se/starvoors/index.html">StaRVOOrS</a>
+                <a class="navbar-brand" href="index.html">StaRVOOrS</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/partners.html">Partners</a>
+                        <a href="partners.html">Partners</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/publications.html">Publications</a>
+                        <a href="publications.html">Publications</a>
                     </li>
                     <li class="active">
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads.html">Downloads</a>
+                        <a href="downloads.html">Downloads</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/tutorial.html">Tutorials</a>
+                        <a href="tutorial.html">Tutorials</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/extras.html">Extras</a>
+                        <a href="extras.html">Extras</a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
                         <h3>StaRVOOrS</h3>
                         <p>The tool.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_source.html" class="btn btn-primary">Source Code</a>
+                            <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>
                         </p>
                         <p>
                            <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>
@@ -118,7 +118,7 @@
                         <h3>Examples Files</h3>
                         <p>Ready-to-try examples for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_files.html" class="btn btn-primary">List</a>
+                            <a href="downloads_files.html" class="btn btn-primary">List</a>
                         </p>
                     </div>
                   </div>
@@ -168,10 +168,10 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="StaRVOOrS%20-%20Downloads_files/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="StaRVOOrS%20-%20Downloads_files/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 
 
