--- a/files.html
+++ b/files.html
@@ -51,25 +51,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/partners.html">Partners</a>
+                        <a href="partners.html">Partners</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/publications.html">Publications</a>
+                        <a href="publications.html">Publications</a>
                     </li>
                     <li class="">
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads.html">Downloads</a>
+                        <a href="downloads.html">Downloads</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/tutorial.html">Tutorials</a>
+                        <a href="tutorial.html">Tutorials</a>
                     </li>                    
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/extras.html">Extras</a>
+                        <a href="extras.html">Extras</a>
                     </li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
                     <br>
                 </div>  							
 				<p>
-                                   This section of the website is not longer maintained. Now, in section <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads.html">Downloads</a> you can find both the binaries of our tool and its source code, the user manual and the files related to the different case studies or examples. Besides, in section <a href="http://cse-212294.cse.chalmers.se/starvoors/tutorial.html">Tutorials</a> you can find the videos related to StaRVOOrS (e.g. how to use our tool). 
+                                   This section of the website is not longer maintained. Now, in section <a href="downloads.html">Downloads</a> you can find both the binaries of our tool and its source code, the user manual and the files related to the different case studies or examples. Besides, in section <a href="tutorial.html">Tutorials</a> you can find the videos related to StaRVOOrS (e.g. how to use our tool). 
 				</p>                         
             </div>
         </div>
