--- a/partners.html
+++ b/partners.html
@@ -90,7 +90,7 @@
                     <br>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a href="http://www.cse.chalmers.se/~chimento/">
+                    <a href="https://mchimento.github.io/">
                         <img src="img/checho.jpg" alt="" width="180" height="150">
                     </a>
                     <h3>Jesús Mauricio Chimento</h3>
