--- a/downloads.html
+++ b/downloads.html
@@ -95,10 +95,10 @@
                         <h3>StaRVOOrS</h3>
                         <p>The tool.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_source.html" class="btn btn-primary">Source Code</a>
+                            <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>
                         </p>
                         <p>
-                           <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
+                           <a href="files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
                         </p>
                     </div>
                   </div>
@@ -109,7 +109,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/files/userguide.pdf" class="btn btn-primary">Download</a> 
+                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a> 
                         </p>
                     </div>
                   </div>
