--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>StaRVOOrS - About</title>
+    <title>StaRVOOrS - Publications</title>
 
     <link href="css/starvoors.css" rel="stylesheet">
 
