--- a/downloads_files.html
+++ b/downloads_files.html
@@ -50,25 +50,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/partners.html">Partners</a>
+                        <a href="partners.html">Partners</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/publications.html">Publications</a>
+                        <a href="publications.html">Publications</a>
                     </li>
                     <li class="active">
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads.html">Downloads</a>
+                        <a href="downloads.html">Downloads</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/tutorial.html">Tutorials</a>
+                        <a href="tutorial.html">Tutorials</a>
                     </li>                    
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/extras.html">Extras</a>
+                        <a href="extras.html">Extras</a>
                     </li>
                 </ul>
             </div>
@@ -94,10 +94,10 @@
                         <h3>StaRVOOrS</h3>
                         <p>The tool.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_tool_source.html" class="btn btn-primary">Source Code</a>
+                            <a href="http://downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>
                         </p>
                         <p>
-                           <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
+                           <a href="files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
                         </p>
                     </div>
                   </div>
@@ -108,7 +108,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/files/userguide.pdf" class="btn btn-primary">Download</a> 
+                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a> 
                         </p>
                     </div>
                   </div>
@@ -119,7 +119,7 @@
                         <h3>Examples Files</h3>
                         <p>Ready-to-try examples for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads_files.html" class="btn btn-primary">List</a> 
+                            <a href="downloads_files.html" class="btn btn-primary">List</a> 
                         </p>
                     </div>
                   </div>
