--- a/downloads_tool_binaries.html
+++ b/downloads_tool_binaries.html
@@ -48,25 +48,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/partners.html">Partners</a>
+                        <a href="partners.html">Partners</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/publications.html">Publications</a>
+                        <a href="starvoors/publications.html">Publications</a>
                     </li>
                     <li class="active">
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/downloads.html">Downloads</a>
+                        <a href="downloads.html">Downloads</a>
                     </li>
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/tutorial.html">Tutorials</a>
+                        <a href="tutorial.html">Tutorials</a>
                     </li>                    
                     <li>
-                        <a href="http://cse-212294.cse.chalmers.se/starvoors/extras.html">Extras</a>
+                        <a href="extras.html">Extras</a>
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
                             <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>  
                         </p>
                         <p>
-                           <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
+                           <a href="files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
                         </p>
                     </div>
                   </div>
@@ -106,7 +106,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoorsfiles/userguide.pdf" class="btn btn-primary">Download</a>
+                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a>
                         </p>
                     </div>
                   </div>
@@ -135,7 +135,7 @@
                     <hr>
                 </div>
                     <p>
-               <a href="http://cse-212294.cse.chalmers.se/starvoors/files/tool/StaRVOOrS_1.7_64bits.tar.gz">StaRVOOrS 1.7 (64 bits)</a><br>
+               <a href="files/tool/StaRVOOrS_1.7_64bits.tar.gz">StaRVOOrS 1.7 (64 bits)</a><br>
            <br>
                     </p>
             </div>
