--- a/downloads_tool_source.html
+++ b/downloads_tool_source.html
@@ -96,7 +96,7 @@
                             <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>
                         </p>
                         <p>
-                           <a href="http://cse-212294.cse.chalmers.se/starvoors/files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>
+                           <a href="files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>
                         </p>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="http://cse-212294.cse.chalmers.se/starvoors/files/userguide.pdf" class="btn btn-primary">Download</a>
+                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a>
                         </p>
                     </div>
                   </div>
@@ -136,32 +136,11 @@
                     <hr>
                 </div>
                <p>
-		       <a href="https://github.com/starvoors/StaRVOOrS-tool">Source code of StaRVOOrS (1.7)</a><br>
+		       <a href="https://github.com/starvoors/StaRVOOrS-tool">Source code of StaRVOOrS</a><br>
 		       <br>
 		       <a href="https://github.com/starvoors/StarVOOrS-GUI">GUI for StaRVOOrS</a><br>
                        <br>
                </p>
-                    <!--<form role="form">
-                        <div class="row">
-                            <div class="form-group col-lg-4">
-                                <label>Name</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control">
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="form-group col-lg-12">
-                                <label>Message</label>
-                                <textarea class="form-control" rows="6"></textarea>
-                            </div>
-                            <div class="form-group col-lg-12">
-                                <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </div>
-                        </div>
-                    </form>-->
             </div>
         </div>
     </div>
