--- a/downloads_files.html
+++ b/downloads_files.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="en">
+
+<head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,14 +14,14 @@
     <link href="css/starvoors.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href="css/css.css" rel="stylesheet" type="text/css">
-    <link href="css/css_002.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,7 +45,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="http://cse-212294.cse.chalmers.se/starvoors/index.html">StaRVOOrS</a>
+                <a class="navbar-brand" href="index.html">StaRVOOrS</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,10 +95,10 @@
                         <h3>StaRVOOrS</h3>
                         <p>The tool.</p>
                         <p>
-                            <a href="http://downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>
+                            <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>  
                         </p>
                         <p>
-                           <a href="files/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
+                           <a href="files/ppDATE Syntax Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
                         </p>
                     </div>
                   </div>
@@ -126,17 +127,34 @@
                 </div>				
             </div>
         </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <h7>Examples Files</h7>
+                    </h2>
+                    <hr>
+                </div>
+                 <p>
+                    <a href="files/Login.tar.gz">Login example files</a><br>
+		    <a href="files/CoffeBrew.tar.gz">Coffee Machine example</a><br>
+		    <a href="files/Mondex_StaRVOOrS.tar.gz">Mondex Case Study</a><br>
+		    <a href="files/softslate.tar.gz">SoftSlate Case Study</a><br>
+		    <br>	
+	         </p>  
+            </div>
         </div>
-    
+    </div>
     <!-- /.container -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
+</body>
 
-
-
-</body></html>
+</html>
