--- a/downloads.html
+++ b/downloads.html
@@ -109,7 +109,7 @@
                         <h3>User Guide</h3>
                         <p>The user guide for StaRVOOrS.</p>
                         <p>
-                            <a href="files/userguide.pdf" class="btn btn-primary">Download</a> 
+                            <a href="https://github.com/starvoors/StaRVOOrS-tool/blob/master/User%20guide/userguide.pdf" class="btn btn-primary">Download</a> 
                         </p>
                     </div>
                   </div>
