--- a/downloads_files.html
+++ b/downloads_files.html
@@ -98,7 +98,7 @@
                             <a href="downloads_tool_binaries.html" class="btn btn-primary">Binaries</a> <a href="downloads_tool_source.html" class="btn btn-primary">Source Code</a>  
                         </p>
                         <p>
-                           <a href="files/ppDATE Syntax Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
+                           <a href="https://github.com/starvoors/StaRVOOrS-tool/blob/master/ppDATE%20Syntax%20Hilighting/ppdate.lang" class="btn btn-primary">ppDATE Syntax Hilighting</a>    
                         </p>
                     </div>
                   </div>
