--- a/partners.html
+++ b/partners.html
@@ -68,9 +68,6 @@
                     <li>
                         <a href="tutorial.html">Tutorials</a>
                     </li>                    
-                    <li>
-                        <a href="extras.html">Extras</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -91,19 +88,19 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <a href="https://mchimento.github.io/">
-                        <img src="img/checho.jpg" alt="" width="180" height="150">
+                        <img src="https://mchimento.github.io/files/profile2.jpg" alt="" width="140" height="150">
                     </a>
                     <h3>Jesús Mauricio Chimento</h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <a href="http://www.cse.chalmers.se/~ahrendt/">
-                        <img src="http://www.cse.chalmers.se/~ahrendt/Wolfgang.jpg" alt="" width="180" height="155">
+                        <img src="http://www.cse.chalmers.se/~ahrendt/Wolfgang.jpg" alt="" width="150" height="145">
                     </a>
                     <h3>Wolfgang Ahrendt</h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <a href="http://www.cse.chalmers.se/~gersch/">
-                        <img src="http://www.cse.chalmers.se/~gersch/foto.jpg" alt="" width="180" height="150">
+                        <img src="http://www.cse.chalmers.se/~gersch/foto.jpg" alt="" width="155" height="150">
                     </a>
                     <h3>Gerardo Schneider</h3>
                 </div>
