--- a/partners.html
+++ b/partners.html
@@ -87,8 +87,8 @@
                     <br>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a href="https://mchimento.github.io/">
-                        <img src="https://mchimento.github.io/files/profile2.jpg" alt="" width="140" height="150">
+                    <a href="https://jmchimento.com">
+                        <img src="https://jmchimento.com/assets/img/me.jpeg" alt="" width="140" height="150">
                     </a>
                     <h3>Jesús Mauricio Chimento</h3>
                 </div>
