--- a/partners.html
+++ b/partners.html
@@ -94,13 +94,13 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <a href="http://www.cse.chalmers.se/~ahrendt/">
-                        <img src="http://www.cse.chalmers.se/~ahrendt/Wolfgang.jpg" alt="" width="150" height="145">
+                        <img src="img/Wolfgang.jpg" alt="" width="150" height="145">
                     </a>
                     <h3>Wolfgang Ahrendt</h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <a href="http://www.cse.chalmers.se/~gersch/">
-                        <img src="http://www.cse.chalmers.se/~gersch/foto.jpg" alt="" width="155" height="150">
+                        <img src="img/gerardo.jpg" alt="" width="155" height="150">
                     </a>
                     <h3>Gerardo Schneider</h3>
                 </div>
