--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 		<meta charset="UTF-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Jesus Mauricio Chimento">
+		<meta name="description"
+          content="The overall purpose of StaRVOOrS
+						 (`Unified <b>Sta</b>tic and <b>R</b>untime <b>V</b>erification of <b>O</b>bject-<b>Or</b>iented <b>S</b>oftware')
+						 is to provide a unified, lightweight to use but powerful in result, method for specifying and verifying, with a
+						 variety of confidence levels, properties of parallel object-oriented software systems.">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
+		<!-- Open Graph metadata -->
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="The overall purpose of StaRVOOrS
+			 (`Unified <b>Sta</b>tic and <b>R</b>untime <b>V</b>erification of <b>O</b>bject-<b>Or</b>iented <b>S</b>oftware')
+			 is to provide a unified, lightweight to use but powerful in result, method for specifying and verifying, with a
+			 variety of confidence levels, properties of parallel object-oriented software systems." />
+		<meta property="og:title" content="StaRVOORS" />
+		<meta property="og:url" content="https://starvoors.github.io/" />
 
 	  <!-- css -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
